--- a/src/openforms/ui/static/ui/scss/screen.scss
+++ b/src/openforms/ui/static/ui/scss/screen.scss
@@ -9,4 +9,5 @@
   --utrecht-document-font-size: 1rem;
 
   --utrecht-page-max-inline-size: 100%;
+  --utrecht-page-background-color: var(--of-view-background, #e6e6e6); // backwards compatibility
 }
