--- a/src/openforms/templates/master.html
+++ b/src/openforms/templates/master.html
@@ -1,4 +1,4 @@
-{% load static cookie_consent_tags solo_tags openforms %}<!DOCTYPE html>
+{% load i18n static cookie_consent_tags solo_tags openforms %}<!DOCTYPE html>
 
 {% get_solo 'config.GlobalConfiguration' as config %}
 {% get_solo 'analytics_tools.AnalyticsToolsConfiguration' as analytics_tools_config %}
@@ -36,8 +36,21 @@
     {% endif %}
 
     {% block content %}
-        Override <code>{% verbatim %}{% block content %}{% endverbatim %}</code>
-        to get some actual content.
+        {% block header %}
+            {% include "includes/page-header.html" %}
+            <a class="skiplink" href="#main-content">{% translate "Show content." %}</a>
+        {% endblock %}
+
+        <div class="utrecht-page__content utrecht-page-content">
+            <main class="layout layout--container">
+                <span class="skiplink-target" id="main-content"></span>
+                {% block inner-content %}
+                    Override <code>{% verbatim %}{% block inner-content %}{% endverbatim %}</code>
+                    to get some actual content.
+                {% endblock %}
+            </main>
+        </div>
+
     {% endblock %}
 
     {% block footer %}
