--- a/src/openforms/ui/templates/ui/views/abstract/detail.html
+++ b/src/openforms/ui/templates/ui/views/abstract/detail.html
@@ -1,8 +1,6 @@
 {% extends './base.html' %}
 
-{% block layout_inner %}
-    {{ block.super }}
-
+{% block inner-content %}
     <section class="layout__container">
         {% block card %}
             <div class="card">
