:fire: [#3178] Remove view component styles
They have been replaced with the NL DS utrecht-page component.

Design token mapping will take place and/or we will set up some
compatibility shims.

--- a/src/openforms/ui/static/ui/scss/screen.scss
+++ b/src/openforms/ui/static/ui/scss/screen.scss
@@ -9,5 +9,8 @@
   --utrecht-document-font-size: 1rem;
 
   --utrecht-page-max-inline-size: 100%;
-  --utrecht-page-background-color: var(--of-view-background, #e6e6e6); // backwards compatibility
+  --utrecht-page-background-color: var(
+    --of-view-background,
+    var(--of-layout-background, #e6e6e6)
+  ); // backwards compatibility
 }
