:recycle: [#3178] Refactor global page scaffolding to main 'templates' directory
Moving stuff out of the ui 'app' and simplifying the renderen HTML
for better discoverability.

--- a/src/openforms/templates/account_blocked.html
+++ b/src/openforms/templates/account_blocked.html
@@ -1,6 +1,6 @@
 {% extends 'master.html' %}
 
-{% block menu %}{% endblock %}
+{% block extra_css %}{% endblock %}
 
 {% block content %}
 
@@ -9,3 +9,5 @@
 <p>If you you want your account unblocked, please contact the webmaster.</p>
 
 {% endblock content %}
+
+{% block footer %}{% endblock %}
