--- a/src/openforms/templates/errors/error_detail.html
+++ b/src/openforms/templates/errors/error_detail.html
@@ -1,5 +1,7 @@
 {% extends "master.html" %}
 
+{% block extra_css %}{% endblock %}
+
 {% block content %}
 
   <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -25,3 +27,5 @@
   </div>
 
 {% endblock %}
+
+{% block footer %}{% endblock %}
