--- a/src/openforms/templates/404.html
+++ b/src/openforms/templates/404.html
@@ -1,10 +1,9 @@
 {% extends 'master.html' %}
 
-{% block menu %}{% endblock %}
+{% block extra_css %}{% endblock %}
 
 {% block content %}
-
   <h1>Sorry, the requested page could not be found (404)</h1>
-
-
 {% endblock content %}
+
+{% block footer %}{% endblock %}
