--- a/src/openforms/ui/static/ui/scss/_nlds.scss
+++ b/src/openforms/ui/static/ui/scss/_nlds.scss
@@ -1,2 +1,3 @@
 @import '@utrecht/components/heading-2/css/index.scss';
 @import '@utrecht/components/page/css/index.scss';
+@import '@utrecht/components/page-header/css/index.scss';
