:recycle: [#3178] Refactor page footer to utrecht-page-footer NL DS component

--- a/src/openforms/ui/static/ui/scss/_nlds.scss
+++ b/src/openforms/ui/static/ui/scss/_nlds.scss
@@ -1,3 +1,6 @@
 @import '@utrecht/components/heading-2/css/index.scss';
+@import '@utrecht/components/link-list/css/index.scss';
 @import '@utrecht/components/page/css/index.scss';
+@import '@utrecht/components/page-content/css/index.scss';
 @import '@utrecht/components/page-header/css/index.scss';
+@import '@utrecht/components/page-footer/css/index.scss';
