--- a/src/openforms/templates/includes/page-footer.html
+++ b/src/openforms/templates/includes/page-footer.html
@@ -2,23 +2,23 @@
 
 {% get_solo 'config.GlobalConfiguration' as config %}
 
-<footer class="footer">
-    <nav class="footer__nav">
-        <ul class="list list--compact">
-            <li class="list__item">
+<footer class="utrecht-page-footer">
+    <div class="utrecht-page-footer__navigation">
+        <ul class="utrecht-link-list">
+            <li class="utrecht-link-list__item">
                 <a
                     href="{{ config.privacy_policy_url }}"
                     class="utrecht-link utrecht-link--openforms utrecht-link--openforms-hover utrecht-link--openforms-inherit"
                 >{% trans "Privacy policy" %}</a>
             </li>
-            <li class="list__item">
+            <li class="utrecht-link-list__item">
                 <a
                     href="{% url 'cookie_consent_cookie_group_list' %}"
                     class="utrecht-link utrecht-link--openforms utrecht-link--openforms-hover utrecht-link--openforms-inherit"
                 >{% trans "Manage cookies" %}</a>
             </li>
             {% if user.is_staff %}
-                <li class="list__item">
+                <li class="utrecht-link-list__item">
                     <a
                         href="{% url 'api:api-docs' %}"
                         class="utrecht-link utrecht-link--openforms utrecht-link--openforms-hover utrecht-link--openforms-inherit"
@@ -26,5 +26,5 @@
                 </li>
             {% endif %}
         </ul>
-    </nav>
+    </div>
 </footer>
