--- a/src/openforms/templates/master.html
+++ b/src/openforms/templates/master.html
@@ -15,6 +15,7 @@
     {% endif %}
     <link href="{% if config.favicon %}{{ config.favicon.url }}{% else %}{% static 'ico/favicon.png' %}{% endif %}" rel="shortcut icon">
     <link href="{% static 'bundles/public-styles.css' %}" media="all" rel="stylesheet"/>
+    {% include "forms/sdk_css_snippet.html" %}
     {% block extra_css %}
         {% include 'includes/design-tokens.html' %}
     {% endblock %}
@@ -44,7 +45,7 @@
         {% endblock %}
 
         <div class="utrecht-page__content utrecht-page-content">
-            <main class="layout layout--container">
+            <main class="utrecht-page-content__main layout layout--container">
                 <span class="skiplink-target" id="main-content"></span>
                 {% block inner-content %}
                     Override <code>{% verbatim %}{% block inner-content %}{% endverbatim %}</code>
