:recycle: [open-formulieren/open-forms#3178] Replace layout wrapper with utrecht-page-content
The NL DS component provides in paddings around the content, so
our layout component in the backend is obsolete.

There is still a layout component in the SDK for the time being,
and the paddings of that one need tweaking so that the A11Y toolbar
and the form content properly align again.

--- a/src/openforms/templates/master.html
+++ b/src/openforms/templates/master.html
@@ -45,13 +45,16 @@
         {% endblock %}
 
         <div class="utrecht-page__content utrecht-page-content">
-            <main class="utrecht-page-content__main layout layout--container">
+            <main class="utrecht-page-content__main">
                 <span class="skiplink-target" id="main-content"></span>
                 {% block inner-content %}
                     Override <code>{% verbatim %}{% block inner-content %}{% endverbatim %}</code>
                     to get some actual content.
                 {% endblock %}
             </main>
+            {% block a11y-toolbar %}
+                {% include "includes/a11y_toolbar.html" only %}
+            {% endblock a11y-toolbar %}
         </div>
     {% endblock %}
 
