--- a/src/openforms/ui/static/ui/scss/components/_index.scss
+++ b/src/openforms/ui/static/ui/scss/components/_index.scss
@@ -1,5 +1,6 @@
 // NL DS based
 @import 'page';
+@import 'page-content';
 @import 'page-footer';
 @import 'page-header';
 
@@ -8,7 +9,6 @@
 @import 'anchor';
 @import 'card';
 @import 'fa-icon';
-@import 'layout';
 @import 'list';
 @import 'nav';
 @import 'skiplink';
