:recycle: Refactor card usage into openforms-card
And delete the CSS in the backend. The openforms-card component is
included in the SDK CSS.

--- a/src/openforms/authentication/templates/of_authentication/logout_confirmation.html
+++ b/src/openforms/authentication/templates/of_authentication/logout_confirmation.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 
 {% block card %}
-    <div class="card">
-        <header class="card__header">
+    <div class="openforms-card">
+        <header class="openforms-card__header">
             <h1 class="title">
                 {% trans "You successfully logged out." %}
             </h1>
