--- a/src/openforms/submissions/templates/submissions/find_submission_for_cosign.html
+++ b/src/openforms/submissions/templates/submissions/find_submission_for_cosign.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 
 {% block card %}
-    <div class="card">
-        <header class="card__header">
+    <div class="openforms-card">
+        <header class="openforms-card__header">
             <h1 class="title">
                 {% trans "Retrieve submission for co-signing" %}
             </h1>
         </header>
 
-        <div class="card__body">
+        <div class="openforms-card__body">
             {% block card_body %}
                 <p class="body">
                     <form method="post" action=".">{% csrf_token %}
