--- a/src/openforms/ui/templates/ui/views/abstract/detail.html
+++ b/src/openforms/ui/templates/ui/views/abstract/detail.html
@@ -2,12 +2,12 @@
 
 {% block inner-content %}
     {% block card %}
-        <div class="card">
-            <header class="card__header">
+        <div class="openforms-card">
+            <header class="openforms-card__header">
                 <h1 class="title">{{ object }}</h1>
             </header>
 
-            <div class="card__body">
+            <div class="openforms-card__body">
                 {% block card_body %}
                     <p class="body">
                         {{ object }}
