[#3559] Add support for Piwik Pro Tag Manager

--- a/src/openforms/analytics_tools/templates/analytics_tools/all_head.html
+++ b/src/openforms/analytics_tools/templates/analytics_tools/all_head.html
@@ -2,5 +2,6 @@
     {% include "analytics_tools/google.html" with request=request only %}
     {% include "analytics_tools/piwik.html" with request=request only %}
     {% include "analytics_tools/piwik_pro.html" with request=request only %}
+    {% include "analytics_tools/piwik_pro_tag_manager.html" with request=request only %}
     {% include "analytics_tools/matomo.html" with request=request only %}
 </template>
