--- a/src/openforms/config/templates/admin/config/theme/preview.html
+++ b/src/openforms/config/templates/admin/config/theme/preview.html
@@ -19,7 +19,7 @@
 {% block content %}
     <h1>{% trans 'Preview a theme' %}</h1>
     <div id="content-main">
-        <form action="" method="post" enctype="multipart/form-data">
+        <form action="" method="post">
             <div>
                 <fieldset class="module aligned ">
                     {% csrf_token %}
