:recycle: [#3005] Refactor on submission completion task orchestration
Now when a submission is completed, when a cosign is done, when a payment is completed or a retry flow is triggered (either because the registration failed or a payment status update failed), the same task chain is called. This is to try and keep a maintainable overview of where tasks come from.

--- a/src/openforms/emails/templates/emails/templatetags/cosign_information.html
+++ b/src/openforms/emails/templates/emails/templatetags/cosign_information.html
@@ -3,7 +3,7 @@
 {% if cosign_complete or waiting_on_cosign %}<h2 style="margin: 1em 0; font-size: 1.5em;">{% trans "Co-sign information" %}</h2>{% endif %}
 {% if cosign_complete %}
     <p>
-        {% blocktranslate trimmed %}This email is a confirmation that this form has been co-signed by {{ cosigner_email }} and can now be processed.{% endblocktranslate %}
+        {% blocktranslate trimmed %}This submission has been co-signed by {{ cosigner_email }}.{% endblocktranslate %}
     </p>
 {%  elif waiting_on_cosign %}
     <p>
