:arrow_up: [#3712] Upgrade to formio-builder 0.11.0
Required fixes/additions:

* Pass the list of pre-configured colors from the backend to the rich
  text component edit form via the context
* Due to the special tabbed layout for the content component, a CSS
  override is required to make sure tabbed cards can be stacked
  without taking up too much blank space
* Polyfill needed for the :has selector used in the above bullet,
  since Firefox only supports it since v121 which was released only
  8 days ago
* The e2e test for the content translations needs to be overridden
  because the layout is substantially different (better!)
* The cosign components need access to the available auth plugins.
  The utility is implemented in the cosign v2 component definition,
  similarly to how this is done for the file component. Once we drop
  our edit form definitions in favour of the new formio builder (i.e.
  it is no longer experimental), we can clean up this code more.

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -57,10 +57,20 @@ div.flatpickr-calendar.open {
 
 .component-edit-container {
   .tab-pane.active {
-    min-height: 50vh;
+    min-block-size: 50vh;
+
+    &:has(.formio-component-content) {
+      min-block-size: 0;
+    }
   }
   .formio-component-content .tab-pane.active {
-    min-height: 0;
+    min-block-size: 0;
+  }
+
+  .formio-component-tabs {
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
   }
 
   // the select dropdowns are overflowing, which is hidden by the modal. this is the
